# testing-python-apps

./: pyproject.toml
section3_self/: app.py  blog.py  post.py
section3_self/tests/integration/: test_blog.py
section3_self/tests/system/: test_app.py
section3_self/tests/unit/: test_blog.py  test_post.py
section4_self/: app.py
section4_self/tests/system/: test_home.py
